--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,1 +1,12 @@
-<h2>home Page</h2>
+<div class="row">
+    <div class="col-sm-5 left-nav">
+        <!-- Left column -->
+        <router-outlet></router-outlet>
+    </div>
+    <!-- /col-3 -->
+    <div class="col-sm-7">
+        <my-map></my-map>
+    </div>
+    <!--/col-span-9-->
+</div>
+
