--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,12 +1,6 @@
 <div class="row">
-    <div class="col-sm-5 left-nav">
-        <!-- Left column -->
-        <router-outlet></router-outlet>
-    </div>
-    <!-- /col-3 -->
-    <div class="col-sm-7">
-        <my-map></my-map>
-    </div>
-    <!--/col-span-9-->
+    <div class="col s4 pink darken-3" style="float: none;display: table-cell;"><h1>{{temp}}</h1>
+        <a materialize="tooltip" class="btn tooltipped" data-position="bottom" data-delay="50" data-tooltip="I am tooltip">Hover me!</a>
+        </div>
+    <div class="col s8 pink darken-1" style="padding: 0; margin: 0; float: none;display: table-cell;"><my-map></my-map></div>
 </div>
-
