--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,21 +1,22 @@
 <header>
-    <!-- Dropdown Structure -->
-    <ul id="dropdown1" class="dropdown-content">
-        <li><a href="#!">one</a></li>
-        <li><a href="#!">two</a></li>
-        <li class="divider"></li>
-        <li><a href="#!">three</a></li>
-    </ul>
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">Logo</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <!-- Dropdown Trigger -->
-                <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
-            </ul>
-        </div>
-    </nav>
+    <div class="navbar-fixed" style="position: absolute;">
+        <nav class="indigo lighten-1" role="navigation">
+            <div class="nav-wrapper">
+                <a style="margin-left: 10px" id="logo-container" href="#" class="brand-logo white-text">Geospatial Data Visualizer</a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a materialize="leanModal" [materializeParams]="[{dismissible: false}]" href="#login" class="white-text"><i class="material-icons left">person</i>Log In</a></li>
+                    <li><a materialize="leanModal" [materializeParams]="[{dismissible: false}]" href="#register" class="white-text"><i class="material-icons left">person_add</i>Register</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 </header>
-<router-outlet></router-outlet>
+<div class="row" style="height : 100%; padding-top : 56px;margin: 0">
+    <div class="col s5" style="height: 100%">
+        <h1>Hello world</h1>
+        <a materialize="tooltip" class="btn tooltipped" data-position="bottom" data-delay="50" data-tooltip="I am tooltip">Hover me!</a>
+    </div>
+    <div class="col s7 blue-grey lighten-5" style="padding: 0; margin: 0;height: 100%"><my-map></my-map></div>
+</div>
+<my-login></my-login>
+<my-register></my-register>
