--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -11,6 +11,11 @@ html, body {
     width: 100%;
 }
 
+.autocomplete-suggestions { border: 1px solid #999; background: #fff; cursor: default; overflow: auto; }
+.autocomplete-suggestion { padding: 10px 5px; font-size: 1.2em; white-space: nowrap; overflow: hidden; }
+.autocomplete-selected { background: #f0f0f0; }
+.autocomplete-suggestions strong { font-weight: normal; color: #3399ff; }
+
 /*================================================================================
   Item Name: Materialize - Material Design Admin Template
   Version: 2.2
