--- a/src/app/app.html
+++ b/src/app/app.html
@@ -33,8 +33,8 @@
             <div id="test1" class="col s12 grey lighten-2" style="height: calc(100% - 48px)">
                 Test 1
             </div>
-            <div id="test2" class="col s12 grey lighten-2" style="height: calc(100% - 48px)">
-                Test 2
+            <div id="test2" class="col s12 grey lighten-2" style="height: calc(100% - 48px); overflow: auto">
+                <my-weather></my-weather>
             </div>
         </div>
     </div>
