--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -19,8 +19,8 @@
             </form>
             <div class="divider"></div>
             <p>
-                <a href="#" class="btn btn-flat white modal-close modal-action">Cancel</a> &nbsp;
-                <a href="#" class="waves-effect waves-indigo indigo lighten-1 btn btn-flat modal-action modal-close">Register</a>
+                <a class="btn btn-flat white modal-close modal-action">Cancel</a> &nbsp;
+                <a class="waves-effect waves-indigo indigo lighten-1 btn btn-flat modal-action modal-close">Register</a>
             </p>
         </div>
     </div>
