--- a/src/app/app.html
+++ b/src/app/app.html
@@ -25,15 +25,15 @@
         <div class="row" style="position: relative">
             <div class="col s12" style="padding: 0">
                 <ul class="tabs white indigo-text text-lighten-1" materialize="tabs" style="overflow: hidden">
-                    <li class="tab col s3"><a href="#test1" class="indigo-text text-lighten-1">Disaster</a></li>
-                    <li class="tab col s3"><a class="active indigo-text text-lighten-1" href="#test2">Weather</a></li>
+                    <li class="tab col s3"><a class="active indigo-text text-lighten-1" href="#disaster">Disaster</a></li>
+                    <li class="tab col s3"><a class="indigo-text text-lighten-1" href="#weather">Weather</a></li>
                     <div class="indicator indigo lighten-1" style="z-index:1"></div>
                 </ul>
             </div>
-            <div id="test1" class="col s12 grey lighten-2" style="height: calc(100% - 48px)">
-                Test 1
+            <div id="disaster" class="col s12 grey lighten-2" style="height: calc(100% - 48px)">
+                <my-disaster></my-disaster>
             </div>
-            <div id="test2" class="col s12 grey lighten-2" style="height: calc(100% - 48px); overflow: auto">
+            <div id="weather" class="col s12 grey lighten-2" style="height: calc(100% - 48px); overflow: auto;">
                 <my-weather></my-weather>
             </div>
         </div>
