fix weather and disaster router

--- a/app/templates/weather.html
+++ b/app/templates/weather.html
@@ -1,5 +1,7 @@
-hello world
-<br>
-<a ui-sref="weather.data">Show data</a>
-<a ui-sref="weather.settings">Show settings</a>
-<div ui-view></div>
+<md-toolbar md-scroll-shrink ng-if="true">
+    <div class="md-toolbar-tools">
+      	<h3>
+        	<span>Weather</span>
+      	</h3>
+    </div>
+</md-toolbar>
