--- a/app/templates/disasters.html
+++ b/app/templates/disasters.html
@@ -5,3 +5,7 @@
       	</h3>
     </div>
 </md-toolbar>
+<div layout="column">
+    <div flex>First item in column</div>
+    <div flex>active disasters</div>
+</div>
