--- a/app/public/css/disasters.css
+++ b/app/public/css/disasters.css
@@ -3,7 +3,7 @@
 .DisasterChipsContainer md-content.autocomplete input {
     min-width: 400px; }
 .DisasterChipsContainer .md-item-text.compact {
-    padding-top: 8px;git
+    padding-top: 8px;
     padding-bottom: 8px; }
 .DisasterChipsContainer .contact-item {
     box-sizing: border-box; }
