--- a/app/templates/disasters.html
+++ b/app/templates/disasters.html
@@ -1,4 +1,4 @@
-<md-toolbar md-scroll-shrink ng-if="true">
+<md-toolbar md-scroll-shrink ng-if="true" ng-controller="DisastersCtrl">
     <div class="md-toolbar-tools">
       	<h3>
         	<span>Disasters</span>
