--- a/app/templates/weather.html
+++ b/app/templates/weather.html
@@ -1,4 +1,4 @@
-<md-toolbar md-scroll-shrink ng-if="true">
+<md-toolbar md-scroll-shrink ng-if="true" ng-controller="WeatherCtrl">
     <div class="md-toolbar-tools">
       	<h3>
         	<span>Weather</span>
