change icon marker to font awesome[C

--- a/app/templates/weather.html
+++ b/app/templates/weather.html
@@ -6,6 +6,7 @@
   	</md-toolbar>
   	<md-content flex layout-fill style="height:100%">
   		<md-list>
+  			 <md-subheader class="md-no-sticky">Searched locations (Favourates)</md-subheader>
 	        <md-list-item ng-repeat="data in favourates" class="md-3-line" ng-click="null">
 	       		<md-icon md-font-library="material-icons">place</md-icon>
 	          	<div class="md-list-item-text" layout="column">
