--- a/app/templates/weather.html
+++ b/app/templates/weather.html
@@ -7,7 +7,7 @@
   	<md-content flex layout-fill style="height:100%">
   		<md-list>
   			 <md-subheader class="md-no-sticky">Searched locations (Favourates)</md-subheader>
-	        <md-list-item ng-repeat="data in favourates" class="md-3-line" ng-click="null">
+	        <md-list-item ng-repeat="data in favourates" class="md-3-line" ng-click="loadWeather()">
 	       		<md-icon md-font-library="material-icons">place</md-icon>
 	          	<div class="md-list-item-text" layout="column">
 	            	<h3 style="font-weight:bold">{{data.properties.name}}</h3>
