--- a/app/templates/weather.html
+++ b/app/templates/weather.html
@@ -5,9 +5,9 @@
     	</div>
   	</md-toolbar>
   	<md-content flex layout-fill style="height:100%">
-  		<md-list>
+  		<md-list ng-model="gis.weather">
   			 <md-subheader class="md-no-sticky">Searched locations (Favourates)</md-subheader>
-	        <md-list-item ng-repeat="data in favourates" class="md-3-line" ng-click="loadWeather()">
+	        <md-list-item ng-repeat="data in favourates" class="md-3-line" ng-click="loadWeather(data)">
 	       		<md-icon md-font-library="material-icons">place</md-icon>
 	          	<div class="md-list-item-text" layout="column">
 	            	<h3 style="font-weight:bold">{{data.properties.name}}</h3>
