--- a/app/templates/weather.html
+++ b/app/templates/weather.html
@@ -1,21 +1,10 @@
-<div  layout="column" ng-cloak style="height: 100%" ng-controller="WeatherCtrl">
+<div  layout="column" ng-cloak style="height: 100%">
   	<md-toolbar class="md-accent">
     	<div class="md-toolbar-tools">
       		<h2 class="md-flex">Weather</h2>
     	</div>
   	</md-toolbar>
   	<md-content flex layout-fill style="height:100%">
-  		<md-list ng-model="gis.weather">
-  			 <md-subheader class="md-no-sticky">Searched locations (Favourates)</md-subheader>
-	        <md-list-item ng-repeat="data in favourates" class="md-3-line" ng-click="loadWeather(data)">
-	       		<md-icon md-font-library="material-icons">place</md-icon>
-	          	<div class="md-list-item-text" layout="column">
-	            	<h3 style="font-weight:bold">{{data.properties.name}}</h3>
-	            	<h4>
-                    	{{data.properties.osm_value? data.properties.osm_value+", " : ""}}{{data.properties.city? data.properties.city+", " : ""}}{{data.properties.country? data.properties.country : ""}}
-                    </h4>
-	          	</div>
-	        </md-list-item>
-		</md-list>
+  		<div ui-view></div>
   	</md-content>
 </div>
