--- a/app/templates/weather.forecast.html
+++ b/app/templates/weather.forecast.html
@@ -1,3 +1,16 @@
-<div ng-controller="WeatherCtrl">
-	Loughing out loud
-</div>
+<md-list ng-model="gis.weather" ng-controller="WeatherCtrl">
+	<md-list-item>
+		<md-card md-theme-watch flex>
+        <md-card-title>
+          <md-card-title-text>
+            <span class="md-headline">{{place[0]}}</span>
+            <span class="md-subhead">Large</span>
+          </md-card-title-text>
+        </md-card-title>
+        <md-card-actions layout="row" layout-align="end center">
+          <md-button>Action 1</md-button>
+          <md-button>Action 2</md-button>
+        </md-card-actions>
+      </md-card>
+	</md-list-item>
+</md-list>
