binding country name and place angularjs

--- a/app/templates/weather.forecast.html
+++ b/app/templates/weather.forecast.html
@@ -3,7 +3,7 @@
 		<md-card md-theme-watch flex>
         <md-card-title>
           <md-card-title-text>
-            <span class="md-headline">{{place[0]}}</span>
+            <span class="md-headline">{{weather.description}}, {{weather.country}}</span>
             <span class="md-subhead">Large</span>
           </md-card-title-text>
         </md-card-title>
