--- a/app/templates/weather.forecast.html
+++ b/app/templates/weather.forecast.html
@@ -3,8 +3,9 @@
 		<md-card md-theme-watch flex>
         <md-card-title>
           <md-card-title-text>
-            <span class="md-headline">{{weather.description}}, {{weather.country}}</span>
-            <span class="md-subhead">Large</span>
+            <span class="md-display-1">{{weather.name}}</span>
+            <span class="md-subhead">{{weather.description}}</span>
+            <i class="owf owf-200 owf-5x" md-colors="{color:'primary'}"></i>
           </md-card-title-text>
         </md-card-title>
         <md-card-actions layout="row" layout-align="end center">
