--- a/app/templates/disasters.html
+++ b/app/templates/disasters.html
@@ -1,10 +1,18 @@
-<md-toolbar md-scroll-shrink ng-if="true">
-    <div class="md-toolbar-tools">
-      	<h3>
-        	<span>Disasters</span>
-      	</h3>
-    </div>
-</md-toolbar>
+<div  layout="column" ng-cloak style="height: 100%">
+    <md-toolbar class="md-accent">
+        <div class="md-toolbar-tools">
+            <h2 class="md-flex">
+                <span>Disasters</span>
+            </h2>
+            <span flex></span>
+            <md-input-container md-no-float style="padding-bottom:0px;">
+                <md-datepicker ng-model="myDate" md-placeholder="Start date"></md-datepicker>
+            </md-input-container>
+            <md-input-container md-no-float style="padding-bottom:0px;">
+                <md-datepicker ng-model="myDate" md-placeholder="End date"></md-datepicker>
+            </md-input-container>
+        </div>
+    </md-toolbar>
 <div layout="column">
     <div flex="60">
         <div layout="column">
@@ -64,4 +72,5 @@
         </div>
     </div>
     <div flex>active disasters</div>
+</div>
 </div>
