--- a/app/templates/disasters.html
+++ b/app/templates/disasters.html
@@ -12,6 +12,15 @@
                 <md-datepicker ng-model="myDate" md-placeholder="End date"></md-datepicker>
             </md-input-container>
         </div>
+        <div class="md-toolbar-tools md-toolbar-tools-bottom">
+            <md-button-group class="md-raised">
+                <md-button>Drought</md-button>
+                <md-button>Fire</md-button>
+                <md-button>Earthquake</md-button>
+                <md-button>Thunderstorm</md-button>
+                <md-button>Flood</md-button>
+            </md-button-group>
+        </div>
     </md-toolbar>
 <div layout="column">
     <div flex="60">
