--- a/app/templates/disasters.html
+++ b/app/templates/disasters.html
@@ -13,7 +13,7 @@
             </md-input-container>
         </div>
         <div class="md-toolbar-tools md-toolbar-tools-bottom">
-            <md-button-group class="md-raised">
+            <md-button-group>
                 <md-button>Drought</md-button>
                 <md-button>Fire</md-button>
                 <md-button>Earthquake</md-button>
