--- a/app/templates/weather.forecast.html
+++ b/app/templates/weather.forecast.html
@@ -3,9 +3,10 @@
 		<md-card md-theme-watch flex>
         <md-card-title layout="row">
           <md-card-title-text flex="25" layout-align="center center">
-            <span class="md-display-1">Pretoria</span>
-            <span class="md-subhead">Clear Sky</span>
+            <span class="md-display-1">{{weather.name}}</span>
+            <span class="md-subhead">{{weather.description}}</span>
             <br>
+            <span class="md-subhead">{{getTime()}}</span>
             <span class="md-subhead">12 September 2016</span>
           </md-card-title-text>
           <md-card-title-text layout="row" layout-align="center center" flex>
