--- a/app/templates/weather.forecast.html
+++ b/app/templates/weather.forecast.html
@@ -7,7 +7,7 @@
             <span class="md-subhead">{{weather.description}}</span>
             <br>
             <span class="md-subhead">{{getTime()}}</span>
-            <span class="md-subhead">12 September 2016</span>
+            <span class="md-subhead">{{getDate()}}</span>
           </md-card-title-text>
           <md-card-title-text layout="row" layout-align="center center" flex>
             <i class="owf owf-200" style="font-size: 10em" md-colors="{color:'primary'}"></i>
