--- a/app/templates/weather.forecast.html
+++ b/app/templates/weather.forecast.html
@@ -1,13 +1,13 @@
 <md-list ng-model="gis.weather" ng-controller="WeatherCtrl">
 	<md-list-item style="padding: 0">
-		<md-card md-theme-watch md-colors="{background: 'lime-300'}" flex>
+		<md-card md-theme-watch md-colors="{background: 'mycolor-300'}" flex>
         <md-card-title layout="row">
           <md-card-title-text flex="25" layout-align="center center">
             <span class="md-display-1">{{weather.name}}</span>
-            <span class="md-subhead">{{weather.description}}</span>
+            <span class="md-body-4">{{weather.description}}</span>
             <br>
-            <span class="md-subhead">{{getTime()}}</span>
-            <span class="md-subhead">{{getDate()}}</span>
+            <span class="md-body-3">{{getTime()}}</span>
+            <span class="md-body-3">{{getDate()}}</span>
           </md-card-title-text>
           <md-card-title-text layout="row" layout-align="center center" flex>
             <i class="owf owf-{{weather.icon}}" style="font-size: 10em" md-colors="{color:'primary'}"></i>
@@ -15,14 +15,14 @@
           <md-card-title-text flex="25" layout-align="center center">
             <span class="md-display-3">{{weather.temp}}&deg;C</span>
             <br>
-            <span class="md-subhead">min: {{weather.temp_min}}&deg;C</span>
-            <span class="md-subhead">max: {{weather.temp_max}}&deg;C</span>
+            <span class="md-body-3">min: {{weather.temp_min}}&deg;C</span>
+            <span class="md-body-3">max: {{weather.temp_max}}&deg;C</span>
           </md-card-title-text>
         </md-card-title>
         <md-card-title layout="row">
-          <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" md-colors="{background: 'accent'}" flex>
+          <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" flex>
             <md-card-title-text layout-align="center center">
-              Monday
+              {{forecast[0].day}}
             </md-card-title-text>
             <md-card-title-text>
                <i class="owf owf-{{forecast[0].icon}} owf-3x" md-colors="{color:'primary'}"></i>
@@ -31,16 +31,17 @@
             <md-card-title-text>
               <span class="md-headline">{{forecast[0].temp}}&deg;C</span>
             </md-card-title-text>
+            <br>
             <md-card-title-text>
-              <span class="md-subhead">min: {{forecast[0].temp_min}}&deg;C</span>
+              <span class="md-body-3">min: {{forecast[0].temp_min}}&deg;C</span>
             </md-card-title-text>
             <md-card-title-text>
-              <span class="md-subhead">max: {{forecast[0].temp_max}}&deg;C</span>
+              <span class="md-body-3">max: {{forecast[0].temp_max}}&deg;C</span>
             </md-card-title-text>
           </md-card>
           <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" md-colors="{background: 'accent'}" flex>
             <md-card-title-text layout-align="center center">
-              Tuesday
+              {{forecast[8].day}}
             </md-card-title-text>
             <md-card-title-text>
                <i class="owf owf-{{forecast[8].icon}} owf-3x" md-colors="{color:'primary'}"></i>
@@ -49,16 +50,17 @@
             <md-card-title-text>
               <span class="md-headline">{{forecast[8].temp}}&deg;C</span>
             </md-card-title-text>
+            <br>
             <md-card-title-text>
-              <span class="md-subhead">min: {{forecast[8].temp_min}}&deg;C</span>
+              <span class="md-body-3">min: {{forecast[8].temp_min}}&deg;C</span>
             </md-card-title-text>
             <md-card-title-text>
-              <span class="md-subhead">max: {{forecast[8].temp_max}}&deg;C</span>
+              <span class="md-body-3">max: {{forecast[8].temp_max}}&deg;C</span>
             </md-card-title-text>
           </md-card>
           <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" md-colors="{background: 'accent'}" flex>
             <md-card-title-text layout-align="center center">
-              Wednesday
+              {{forecast[16].day}}
             </md-card-title-text>
             <md-card-title-text>
                <i class="owf owf-{{forecast[16].icon}} owf-3x" md-colors="{color:'primary'}"></i>
@@ -67,16 +69,17 @@
             <md-card-title-text>
               <span class="md-headline">{{forecast[16].temp}}&deg;C</span>
             </md-card-title-text>
+            <br>
             <md-card-title-text>
-              <span class="md-subhead">min: {{forecast[16].temp_min}}&deg;C</span>
+              <span class="md-body-3">min: {{forecast[16].temp_min}}&deg;C</span>
             </md-card-title-text>
             <md-card-title-text>
-              <span class="md-subhead">max: {{forecast[16].temp_max}}&deg;C</span>
+              <span class="md-body-3">max: {{forecast[16].temp_max}}&deg;C</span>
             </md-card-title-text>
           </md-card>
           <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" md-colors="{background: 'accent'}" flex>
             <md-card-title-text layout-align="center center">
-              Thursday
+              {{forecast[24].day}}
             </md-card-title-text>
             <md-card-title-text>
                <i class="owf owf-{{forecast[24].icon}} owf-3x" md-colors="{color:'primary'}"></i>
@@ -85,16 +88,17 @@
             <md-card-title-text>
               <span class="md-headline">{{forecast[24].temp}}&deg;C</span>
             </md-card-title-text>
+            <br>
             <md-card-title-text>
-              <span class="md-subhead">min: {{forecast[24].temp_min}}&deg;C</span>
+              <span class="md-body-3">min: {{forecast[24].temp_min}}&deg;C</span>
             </md-card-title-text>
             <md-card-title-text>
-              <span class="md-subhead">max: {{forecast[24].temp_max}}&deg;C</span>
+              <span class="md-body-3">max: {{forecast[24].temp_max}}&deg;C</span>
             </md-card-title-text>
           </md-card>
           <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" md-colors="{background: 'accent'}" flex>
             <md-card-title-text layout-align="center center">
-              Friday
+              {{forecast[32].day}}
             </md-card-title-text>
             <md-card-title-text>
                <i class="owf owf-{{forecast[32].icon}} owf-3x" md-colors="{color:'primary'}"></i>
@@ -103,11 +107,12 @@
             <md-card-title-text>
               <span class="md-headline">{{forecast[32].temp}}&deg;C</span>
             </md-card-title-text>
+            <br>
             <md-card-title-text>
-              <span class="md-subhead">min: {{forecast[32].temp_min}}&deg;C</span>
+              <span class="md-body-3">min: {{forecast[32].temp_min}}&deg;C</span>
             </md-card-title-text>
             <md-card-title-text>
-              <span class="md-subhead">max: {{forecast[32].temp_max}}&deg;C</span>
+              <span class="md-body-3">max: {{forecast[32].temp_max}}&deg;C</span>
             </md-card-title-text>
           </md-card>
         </md-card-title>
