--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -18,6 +18,14 @@ body {
     background-color: #FEEBC8;
 }
 
+.cardLink {
+    cursor: pointer;
+}
+
+.cardLink:hover {
+    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+}
+
 md-button-group {
   border-radius: 3px;
   display: inline-block;
