--- a/app/templates/weather.forecast.html
+++ b/app/templates/weather.forecast.html
@@ -1,6 +1,6 @@
 <md-list ng-model="gis.weather" ng-controller="WeatherCtrl">
 	<md-list-item style="padding: 0">
-		<md-card md-theme-watch md-colors="{background: 'mycolor-300'}" flex>
+		<md-card md-theme-watch md-colors="{background: 'mycolor-300'}" style="margin-bottom: 0" flex>
         <md-card-title layout="row">
           <md-card-title-text flex="25" layout-align="center center">
             <span class="md-display-1">{{weather.name}}</span>
@@ -20,7 +20,7 @@
           </md-card-title-text>
         </md-card-title>
         <md-card-title layout="row">
-          <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" flex>
+          <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" class="cardLink" flex>
             <md-card-title-text layout-align="center center">
               {{forecast[0].day}}
             </md-card-title-text>
@@ -39,7 +39,7 @@
               <span class="md-body-3">max: {{forecast[0].temp_max}}&deg;C</span>
             </md-card-title-text>
           </md-card>
-          <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" md-colors="{background: 'accent'}" flex>
+          <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" class="cardLink" md-colors="{background: 'accent'}" flex>
             <md-card-title-text layout-align="center center">
               {{forecast[8].day}}
             </md-card-title-text>
@@ -58,7 +58,7 @@
               <span class="md-body-3">max: {{forecast[8].temp_max}}&deg;C</span>
             </md-card-title-text>
           </md-card>
-          <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" md-colors="{background: 'accent'}" flex>
+          <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" class="cardLink" md-colors="{background: 'accent'}" flex>
             <md-card-title-text layout-align="center center">
               {{forecast[16].day}}
             </md-card-title-text>
@@ -77,7 +77,7 @@
               <span class="md-body-3">max: {{forecast[16].temp_max}}&deg;C</span>
             </md-card-title-text>
           </md-card>
-          <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" md-colors="{background: 'accent'}" flex>
+          <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" class="cardLink" md-colors="{background: 'accent'}" flex>
             <md-card-title-text layout-align="center center">
               {{forecast[24].day}}
             </md-card-title-text>
@@ -96,7 +96,7 @@
               <span class="md-body-3">max: {{forecast[24].temp_max}}&deg;C</span>
             </md-card-title-text>
           </md-card>
-          <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" md-colors="{background: 'accent'}" flex>
+          <md-card layout-align="center center" style="padding-top: 10px; padding-bottom: 10px" class="cardLink" md-colors="{background: 'accent'}" flex>
             <md-card-title-text layout-align="center center">
               {{forecast[32].day}}
             </md-card-title-text>
@@ -118,4 +118,9 @@
         </md-card-title>
       </md-card>
 	</md-list-item>
+  <md-list-item style="padding: 0">
+    <md-card md-theme-watch md-colors="{background: 'mycolor-300'}" flex>
+      asdfg
+    </md-card>
+  </md-list-item>
 </md-list>
