humidity, wind speed

--- a/app/templates/weather.forecast.html
+++ b/app/templates/weather.forecast.html
@@ -17,6 +17,9 @@
             <br>
             <span class="md-body-3">min: {{weather.temp_min}}&deg;C</span>
             <span class="md-body-3">max: {{weather.temp_max}}&deg;C</span>
+            <br>
+            <span class="md-body-3">Humidity: {{weather.humidity}}%</span>
+            <span class="md-body-3">Wind: {{weather.wind}} m/s</span>
           </md-card-title-text>
         </md-card-title>
         <md-card-title layout="row">
